--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,18 @@
 
 /* Your CSS Code here. */
+.holder{
+	width:100vw;
+	height:100vw;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.a{
+	width:100px;
+	height:100px;
+	background-color:blue;
+	
+	
+	
+}
